# opengi-2.1.1

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  config.h  configure  configure.ac
examples/gim/: Makefile.am  Makefile.in  gim.c
include/: Makefile.am  Makefile.in
include/GI/: gi.h
lib/: OpenGId.exp
projects/vs2005/: OpenGI.sln  OpenGI.vcxproj  OpenGI.vcxproj.filters  gim.vcproj  gim.vcxproj  gim.vcxproj.filters
src/: gi_blas.c  gi_blas.h  gi_container.c  gi_context.c  gi_context.h  gi_cutter.c  gi_gl.c  gi_gl.h  gi_image.c  gi_image.h  gi_math.h  gi_memory.c  gi_mesh.c  gi_multiresolution.c  gi_numerics.c  gi_parameterizer.c  gi_sampler.c  gi_sampler.h
